spacing fix and colour test

--- a/src/output.css
+++ b/src/output.css
@@ -577,6 +577,10 @@ video {
   margin-top: 12rem;
 }
 
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
 .flex {
   display: flex;
 }
@@ -595,10 +599,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.w-1\/6 {
-  width: 16.666667%;
 }
 
 .w-8 {
@@ -645,23 +645,9 @@ video {
   border-width: 2px;
 }
 
-.border {
-  border-width: 1px;
-}
-
-.border-blue-700 {
-  --tw-border-opacity: 1;
-  border-color: rgb(29 78 216 / var(--tw-border-opacity));
-}
-
 .border-primary {
   --tw-border-opacity: 1;
   border-color: rgb(13 29 69 / var(--tw-border-opacity));
-}
-
-.border-purple-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(147 51 234 / var(--tw-border-opacity));
 }
 
 .bg-primary {
@@ -679,7 +665,7 @@ video {
 }
 
 .bg-translucent {
-  background-image: linear-gradient(to top, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2));
+  background-image: linear-gradient(to top, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1));
 }
 
 .bg-cover {
